--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-ses": "^3.901.0",
     "@google-cloud/storage": "^7.16.0",
     "@hookform/resolvers": "^3.10.0",
+    "@icon-park/react": "^1.4.2",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.4",
