Mejoras UI y configuración Replit
- Aumentado tamaño del logo en auth (208px móvil, 256px desktop)
- Cambiado color accent de amarillo (#FDC311) a azul (#083B6F)
- Implementado Remember Me con localStorage
- Agregado endpoint forgot-password (backend)
- Centrados iconos en travel-detail
- Removidas dependencias no utilizadas (Uppy, chart.js)

Configuración:
- Separación DATABASE_URL_DEV y DATABASE_URL
- Actualizado .gitignore con archivos de Replit
- Agregado REPLIT_SETUP.md con guía completa
- Agregado .env.example como template
- Removidas credenciales de .replit

Assets:
- Incluido logo Itineralia (itineralia-logo.png)
- Imágenes de covers para auth background

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
 node_modules
 .env
-uploads/
+dist/
+.replit
+*.log
+.DS_Store
+.local/
+.vscode/
+*.swp
+*.swo
+*~
+package-lock.json
+.cache/
+
+# Uploads folder - ignore everything
+uploads/*
+
+# But include these specific files/folders
+!uploads/itineraria-logo.png
+!uploads/covers/
+uploads/covers/*
+!uploads/covers/*.jpg
+!uploads/covers/*.png
+!uploads/covers/*.jpeg
