--- a/package.json
+++ b/package.json
@@ -52,21 +52,12 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/archiver": "^6.0.3",
     "@types/pg": "^8.16.0",
-    "@uppy/aws-s3": "^4.3.2",
-    "@uppy/core": "^4.5.2",
-    "@uppy/dashboard": "^4.4.3",
-    "@uppy/drag-drop": "^4.2.2",
-    "@uppy/file-input": "^4.2.2",
-    "@uppy/progress-bar": "^4.3.2",
-    "@uppy/react": "^4.5.2",
     "archiver": "^7.0.1",
     "axios": "^1.11.0",
-    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
-    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "drizzle-orm": "^0.39.1",
@@ -82,11 +73,11 @@
     "mailgun.js": "^12.0.3",
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
+    "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.18.0",
-    "puppeteer": "^24.17.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
@@ -125,13 +116,13 @@
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.2",
-    "drizzle-kit": "^0.30.4",
+    "drizzle-kit": "^0.31.9",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.21.0",
     "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "vite": "^6.1.6"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
